# etsy-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/etsy/: Makefile  README.md  pyproject.toml
apps/etsy/src/etsy_mcp/: __init__.py  __main__.py  _version.py  bootstrap.py  categories.py  main.py  runtime.py  schemas.py
apps/etsy/src/etsy_mcp/cli/: __init__.py  auth.py
apps/etsy/src/etsy_mcp/config/: config.yaml
apps/etsy/src/etsy_mcp/managers/: __init__.py  buyer_manager.py  digital_file_manager.py  image_manager.py  inventory_manager.py  listing_manager.py  payment_manager.py  property_manager.py  receipt_manager.py  review_manager.py  shipping_manager.py  shop_manager.py  taxonomy_manager.py  translation_manager.py  user_manager.py  video_manager.py
apps/etsy/src/etsy_mcp/models/: __init__.py  listing.py  listing_template.py  shop.py  shop_section.py
apps/etsy/src/etsy_mcp/tools/: __init__.py  buyer.py  listing_digital_files.py  listing_images.py  listing_inventory.py  listing_properties.py  listing_translations.py  listing_videos.py  listings.py  payments.py  receipts.py  reviews.py  shipping.py  shops.py  taxonomy.py  users.py
apps/etsy/tests/unit/: conftest.py  test_cli_auth.py  test_image_manager.py  test_listing_manager_verification.py  test_schemas.py  test_shop_manager.py
docs/: ARCHITECTURE.md  ERROR_HANDLING.md  OAUTH.md  RATE_LIMITS.md  TESTING.md  WORKFLOWS.md  permissions.md
