[project]
name = "etsy-mcp-workspace"
version = "0.0.0"
description = "Etsy MCP ecosystem workspace root — the installable package is apps/etsy (name: etsy-mcp). This root exists only to group the workspace members."
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
# Cycle 2 fix P1-E: explicit testpaths + importmode=importlib lets
# `uv run pytest` from the workspace root discover all three packages
# without colliding on identically-named `tests` package directories.
# Per-package invocation (`uv run --package etsy-core pytest packages/etsy-core/tests`)
# also still works.
asyncio_mode = "auto"
testpaths = [
    "packages/etsy-core/tests",
    "packages/etsy-mcp-shared/tests",
    "apps/etsy/tests/unit",
]
addopts = ["--import-mode=importlib"]
