[project]
name = "etsy-mcp"
version = "0.0.0"
description = "Professional-grade Etsy MCP server — 90 pure-primitive tools wrapping Etsy's Open API v3. Capability layer, not reasoning layer."
requires-python = ">=3.13"
authors = [
    { name = "Rick Villucci", email = "130101034+mofiaboss@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["mcp", "etsy", "llm", "anthropic", "claude", "api"]
dependencies = [
    "etsy-core",
    "etsy-mcp-shared",
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "omegaconf>=2.3.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
etsy-mcp = "etsy_mcp.__main__:main"

[tool.uv.sources]
etsy-core = { workspace = true }
etsy-mcp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etsy_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[tool.mypy]
strict = true
python_version = "3.13"
